# ClinicalTrialMatchenv

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  inference.py  main.py  openenv.yaml  pyproject.toml  requirements.txt  test_inference_mock.py
api/: __init__.py  server.py
data/: realistic_cases.json  realistic_trials.json
docs/: README.md  SCHEMA_NOTES.md
examples/: example_eligibility.py  example_environment.py  example_refactored_rewards.py
scripts/: verify_graders.py
server/: app.py
src/: __init__.py  config.py  environment.py  graders.py  models.py  realistic_cases.py  research_analysis.py  rl_integration.py  rl_training.py  tasks.py
src/agents/: clinical_trial_agent.py  enhanced_evaluation.py  evaluate_agent.py  robust_evaluation.py
src/engine/: __init__.py  eligibility_engine.py
src/schemas/: __init__.py  patient_schema.py  trial_schema.py
tests/: __init__.py
tests/integration/: __init__.py  test_all_tasks_e2e.py  test_api.py  test_phase3_e2e.py
tests/unit/: __init__.py  test_audit_fixes.py  test_engine_audit.py  test_graders.py  test_openenv_compliance.py  test_patient_generation.py  test_phase1_comprehensive.py  test_phase2_action_system.py  test_strictness.py  test_task_integration.py  test_tasks.py  test_trial_generation.py  test_trial_strictness.py
